# NamParametricPlugin

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
Source/: NamParametricPluginEditor.cpp  NamParametricPluginEditor.h  NamParametricPluginProcessor.cpp  NamParametricPluginProcessor.h
Source/DSP/: NamModelEngine.cpp  NamModelEngine.h
Source/UI/: ModelBarComponent.cpp  ModelBarComponent.h  ModelParametersPanel.cpp  ModelParametersPanel.h  NamColours.h  NamLookAndFeel.cpp  NamLookAndFeel.h  SegmentedSwitch.cpp  SegmentedSwitch.h  TopBarComponent.cpp  TopBarComponent.h
Tests/: NamModelEngineSmokeTest.cpp
